# transport_classificantion_FL

./: README.md  client.py  dummie.csv  pyproject.toml  server.py  test.csv  train1.csv  train2.csv  train3.csv  utils.py
