[tool.poetry]
name = "FL-class"
version = "0.1.0"
description = ""
authors = ["Iago Carvalho Cavalcante <carvalhoiago@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
flwr = "^0.16.0"
scikit-learn = "^0.24.2"
numpy = "^1.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
